# reiki

./: .gitignore  README.md  form.py  form2.py  pyproject.toml
documentos/pipeline_dados/data_raw/: AvaChakras.xlsx
documentos/pipeline_dados/scripts/: extracao_form_1224.py
